CAY-2166 Auto-loading of Cayenne modules
CAY-2168 Split DbLoader to parts and clean it up
CAY-2169 Split DbMerger to parts and clean it up
CAY-2170 MergeToken sorting is highly unstable
CAY-2172 Cleanup Modeler import and migrate db actions
CAY-2176 Java 7 diamond class generation templates
CAY-2177 Sync auto generated state of PK between model and DB

Bug Fixes:

CAY-2174 Change FK attribute name cause ObjAttribute appear after Reverse Engineering
CAY-2175 AliasName used in EJBQLQuery is not working if it contains mixed case

----------------------------------
Release: 4.0.M4
Date: December 13, 2016
----------------------------------
Changes/New Features:

CAY-2051 Applying new Reverse Engineering to the Modeler
CAY-2053 SQLExec fluent query API
CAY-2060 Replace Query objects in DataMap with query descriptors
CAY-2062 MappedSelect and MappedExec fluent query API
CAY-2063 ProcedureCall fluent query API
CAY-2065 Pluggable serialization and connectivity layers for ROP
CAY-2073 Ordering.orderedList methods
CAY-2074 Support for catalogs in stored procedures
CAY-2076 Implement Jetty HTTP/1.1 and HTTP/2 Client support for ROP Client
CAY-2083 Implement Protostuff as serialization service for Cayenne ROP
CAY-2090 Untangle HttpRemoteService from ServiceContext thread local setup
CAY-2100 Add supporting generated keys for PostgreSQL
CAY-2102 EJBQL: db: path not supported in select columns
CAY-2103 cayenne-crypto: support for mapping non-String and non-binary types
CAY-2106 cayenne-crypto: allow DI contribution of type converters inside ValueTransformerFactory
CAY-2107 cayenne-crypto: Lazy initialization of crypto subsystem
CAY-2111 Unbind transaction object from the current thread for iterated queries
CAY-2112 Expose callback for "performInTransaction"
CAY-2113 cdbimport: Reverse-engineering reinstates previously ignored columns
CAY-2114 cdbimport: object layer settings are not respected
CAY-2115 DbLoader - allow loading DataMap without Obj layer