@@ -143,6 +143,20 @@ name|cayenne
 operator|.
 name|unit
 operator|.
+name|UnitDbAdapter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|unit
+operator|.
 name|di
 operator|.
 name|server
@@ -216,6 +230,12 @@ name|Inject
 specifier|private
 name|ObjectContext
 name|context
+decl_stmt|;
+annotation|@
+name|Inject
+specifier|private
+name|UnitDbAdapter
+name|accessStackAdapter
 decl_stmt|;
 comment|// CAY-416
 annotation|@
@@ -597,6 +617,17 @@ name|void
 name|testEscapeCharacter
 parameter_list|()
 block|{
+if|if
+condition|(
+operator|!
+name|accessStackAdapter
+operator|.
+name|supportsEscapeInLike
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|Artist
 name|a1
 init|=
@@ -756,6 +787,17 @@ name|void
 name|testContains_Escape
 parameter_list|()
 block|{
+if|if
+condition|(
+operator|!
+name|accessStackAdapter
+operator|.
+name|supportsEscapeInLike
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|Artist
 name|a1
 init|=
