@@ -1874,6 +1874,17 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+if|if
+condition|(
+operator|!
+name|accessStackAdapter
+operator|.
+name|supportsEscapeInLike
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|createArtistsWildcardDataSet
 argument_list|()
 expr_stmt|;
@@ -1941,6 +1952,17 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+if|if
+condition|(
+operator|!
+name|accessStackAdapter
+operator|.
+name|supportsEscapeInLike
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|createArtistsWildcardDataSet
 argument_list|()
 expr_stmt|;
@@ -2024,6 +2046,17 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+if|if
+condition|(
+operator|!
+name|accessStackAdapter
+operator|.
+name|supportsEscapeInLike
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|createArtistsWildcardDataSet
 argument_list|()
 expr_stmt|;
@@ -2107,6 +2140,17 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+if|if
+condition|(
+operator|!
+name|accessStackAdapter
+operator|.
+name|supportsEscapeInLike
+argument_list|()
+condition|)
+block|{
+return|return;
+block|}
 name|tArtist
 operator|.
 name|insert
