@@ -93,6 +93,15 @@ return|return
 literal|false
 return|;
 block|}
+specifier|public
+name|boolean
+name|supportsEscapeInLike
+parameter_list|()
+block|{
+return|return
+literal|false
+return|;
+block|}
 block|}
 end_class
 
