@@ -101,6 +101,22 @@ name|apache
 operator|.
 name|cayenne
 operator|.
+name|dba
+operator|.
+name|sqlite
+operator|.
+name|SQLiteAdapter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
 name|di
 operator|.
 name|Provider
@@ -570,6 +586,80 @@ argument_list|(
 literal|"derby"
 argument_list|,
 name|derby
+argument_list|)
+expr_stmt|;
+name|DataSourceInfo
+name|sqlite
+init|=
+operator|new
+name|DataSourceInfo
+argument_list|()
+decl_stmt|;
+name|sqlite
+operator|.
+name|setAdapterClassName
+argument_list|(
+name|SQLiteAdapter
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|sqlite
+operator|.
+name|setUserName
+argument_list|(
+literal|"sa"
+argument_list|)
+expr_stmt|;
+name|sqlite
+operator|.
+name|setPassword
+argument_list|(
+literal|""
+argument_list|)
+expr_stmt|;
+name|sqlite
+operator|.
+name|setDataSourceUrl
+argument_list|(
+literal|"jdbc:sqlite:file:memdb?mode=memory&cache=shared"
+argument_list|)
+expr_stmt|;
+name|sqlite
+operator|.
+name|setJdbcDriver
+argument_list|(
+literal|"org.sqlite.JDBC"
+argument_list|)
+expr_stmt|;
+name|sqlite
+operator|.
+name|setMinConnections
+argument_list|(
+name|ConnectionProperties
+operator|.
+name|MIN_CONNECTIONS
+argument_list|)
+expr_stmt|;
+name|sqlite
+operator|.
+name|setMaxConnections
+argument_list|(
+name|ConnectionProperties
+operator|.
+name|MAX_CONNECTIONS
+argument_list|)
+expr_stmt|;
+name|inMemoryDataSources
+operator|.
+name|put
+argument_list|(
+literal|"sqlite"
+argument_list|,
+name|sqlite
 argument_list|)
 expr_stmt|;
 block|}
