@@ -24,6 +24,7 @@ CAY-2170 MergeToken sorting is highly unstable
 CAY-2172 Cleanup Modeler import and migrate db actions
 CAY-2176 Java 7 diamond class generation templates
 CAY-2177 Sync auto generated state of PK between model and DB
+CAY-2197 Update sqlite version and enable in-memory default config
 
 Bug Fixes:
 
